--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index</title>
     <link rel="stylesheet" href="./styles/main.css" />
+    <title>Index</title>
+    <script
+      src="https://kit.fontawesome.com/a17e98c9af.js"
+      crossorigin="anonymous">
+    </script>
   </head>
 
   <body>
@@ -116,13 +120,12 @@
                 <div class="article-format2__text">
                   <div class="article-format2__text__top">
                     <h2>
-                      El poder intelectual: Un algoritmo y su conocimiento
+                      El poder intelectual del algoritmo y su conocimiento
                     </h2>
                     <p>
                       Un algoritmo, procedimiento computacional, para la
                       solución de problemas en un número finito de pasos.
-                      Involucra deducción, abstracción y lógica
-                      estructurada.
+                      Involucra deducción, abstracción y lógica estructurada.
                     </p>
                   </div>
                   <div class="article-format2__text__bottom">
@@ -155,6 +158,7 @@
                   </div>
                 </div>
               </article>
+
               <article class="article-format2">
                 <figure class="article-format2__figure">
                   <img
@@ -203,6 +207,7 @@
                   </div>
                 </div>
               </article>
+
               <article class="article-format2">
                 <figure class="article-format2__figure">
                   <img
@@ -258,8 +263,339 @@
               </a>
             </div>
           </section>
+
+          <section class="allarticles">
+            <h2 class="allarticles__title">
+              TODOS LOS ARTÍCULOS
+            </h2>
+            <div class="grid-wrapper">
+              <div>
+                <figure class="article-format2__figure">
+                  <img
+                    class="img-responsive"
+                    src="./images/imgsect1.png"
+                    alt=""
+                  />
+                </figure>
+              </div>
+              <div>
+                <div class="article-format2__text">
+                  <div class="article-format2__text__top">
+                    <h2>
+                      Me interesa la tecnología, pero al servicio de las
+                      intenciones de la arquitectura
+                    </h2>
+                    <p>
+                      Hoy en día hay algunos que prefieren pensar en la
+                      arquitectura sólo en términos de acción, dando primacía a
+                      lo instantáneo. Pero en mi opinión la arquitectura puede y
+                      debe aspirar a una cierta durabilidad.
+                    </p>
+                  </div>
+                  <div class="article-format2__text__bottom">
+                    <div class="article-format2__text__bottom__left">
+                      <h3>Peter Calderón</h3>
+                      <time>Abr 22, 3 min leído</time>
+                    </div>
+                    <div class="article-format2__text__bottom__right">
+                      <ul>
+                        <li>
+                          <a href="#">
+                            <img
+                              width="16"
+                              src="./images/icon-save.png"
+                              alt="favorite"
+                            />
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <img
+                              width="14"
+                              src="./images/icon-share.png"
+                              alt="social media"
+                            />
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <figure class="article-format2__figure">
+                  <img
+                    class="img-responsive"
+                    src="./images/imgsect2.png"
+                    alt=""
+                  />
+                </figure>
+              </div>
+              <div>
+                <div class="article-format2__text">
+                  <div class="article-format2__text__top">
+                    <h2>
+                      Nuevos bloques de vidrio para aprovechar la luz, el
+                      espacio y el color
+                    </h2>
+                    <p>
+                      Nuevos bloques de vidrio para aprovechar la luz, el
+                      espacio y el color El nuevo bloque Orbis une diseño y
+                      funcionalidad para responder a las diferentes necesidades
+                      de proyecto: llevando la luz natural a los lugares donde
+                      más se necesita y ofreciendo una mayor estabilidad,
+                      resistencia mecánica y aislamiento acústico.
+                    </p>
+                  </div>
+                  <div class="article-format2__text__bottom">
+                    <div class="article-format2__text__bottom__left">
+                      <h3>Emilio Casariego</h3>
+                      <time>May 7, 3 min leído</time>
+                    </div>
+                    <div class="article-format2__text__bottom__right">
+                      <ul>
+                        <li>
+                          <a href="#">
+                            <img
+                              width="16"
+                              src="./images/icon-save.png"
+                              alt="favorite"
+                            />
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <img
+                              width="14"
+                              src="./images/icon-share.png"
+                              alt="social media"
+                            />
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <figure class="article-format2__figure">
+                  <img
+                    class="img-responsive"
+                    src="./images/imgsect3.png"
+                    alt=""
+                  />
+                </figure>
+              </div>
+              <div>
+                <div class="article-format2__text">
+                  <div class="article-format2__text__top">
+                    <h2>
+                      El ladrillo antisísmico o autocentrable
+                    </h2>
+                    <p>
+                      Este ladrillo es de aplicación en todo tipo de edificaciones.
+            Podemos decir que las ventajas sobre los ladrillos tradicionales son
+            una multitud, entre las que destacan la reducción de tiempos de
+            construcción de fábricas.
+                    </p>
+                  </div>
+                  <div class="article-format2__text__bottom">
+                    <div class="article-format2__text__bottom__left">
+                      <h3>Sócrates Altamirano</h3>
+                      <time>Dic 14, 3 min leído</time>
+                    </div>
+                    <div class="article-format2__text__bottom__right">
+                      <ul>
+                        <li>
+                          <a href="#">
+                            <img
+                              width="16"
+                              src="./images/icon-save.png"
+                              alt="favorite"
+                            />
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <img
+                              width="14"
+                              src="./images/icon-share.png"
+                              alt="social media"
+                            />
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <figure class="article-format2__figure">
+                  <img
+                    class="img-responsive"
+                    src="./images/imgsect4.png"
+                    alt=""
+                  />
+                </figure>
+              </div>
+              <div>
+                <div class="article-format2__text">
+                  <div class="article-format2__text__top">
+                    <h2>
+                      “Soluciones Smart” La tecnología del vidrio al servicio de tu
+            creatividad
+                    </h2>
+                    <p>
+                      El talento del diseñador ha sido siempre un factor decisivo para
+            afrontar los retos de la arquitectura contemporánea. Cultura,
+            ciencia, instinto: son muchas las cualidades que contribuyen a
+            realizar la solución ideal, con exigencias y objetivos.
+                    </p>
+                  </div>
+                  <div class="article-format2__text__bottom">
+                    <div class="article-format2__text__bottom__left">
+                      <h3>Prisciliano Collo</h3>
+                      <time>Oct 27, 3 min leído</time>
+                    </div>
+                    <div class="article-format2__text__bottom__right">
+                      <ul>
+                        <li>
+                          <a href="#">
+                            <img
+                              width="16"
+                              src="./images/icon-save.png"
+                              alt="favorite"
+                            />
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <img
+                              width="14"
+                              src="./images/icon-share.png"
+                              alt="social media"
+                            />
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <figure class="article-format2__figure">
+                  <img
+                    class="img-responsive"
+                    src="./images/imgsect5.png"
+                    alt=""
+                  />
+                </figure>
+              </div>
+              <div>
+                <div class="article-format2__text">
+                  <div class="article-format2__text__top">
+                    <h2>
+                      SLOT, un hotel prefabricado
+                    </h2>
+                    <p>
+                      Desde Estados Unidos nos llega SLOT; Proyecto realizado por Natalie
+            Kwee y Caio Barboza y que fue presentado para los premios «Radical
+            Innovation Awards 2013» obteniendo por el una Mención de Honor.
+                    </p>
+                  </div>
+                  <div class="article-format2__text__bottom">
+                    <div class="article-format2__text__bottom__left">
+                      <h3>Natalie Kwee</h3>
+                      <time>May 4, 3 min leído</time>
+                    </div>
+                    <div class="article-format2__text__bottom__right">
+                      <ul>
+                        <li>
+                          <a href="#">
+                            <img
+                              width="16"
+                              src="./images/icon-save.png"
+                              alt="favorite"
+                            />
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <img
+                              width="14"
+                              src="./images/icon-share.png"
+                              alt="social media"
+                            />
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>      
         </div>
       </main>
+
+      <footer class="footer">
+        <div class="footerWrapper">
+          <section>
+            <div class="FooterText">
+              <h1 class="FooterH1">¿Quieres aprender con nosotros?</h1>
+              <p class="FooterP">
+                "El arquitecto piensa pero no producirá una obra hecha de palabras
+                sino un objeto hecho de formas y de materiales. Este objeto
+                transmite su propio y particular mensaje que en buena parte no
+                admite ser traducido a palabras. Este lenguaje arquitectónico se
+                corresponde a un tiempo histórico del cual es expresión".
+                Charles Baudelaire
+              </p>
+            </div>
+            <div>
+              <a href="$" class="buttom">Hablemos</a>
+            </div>
+          </section>
+        </div>  
+        <div class="divisionFoot"></div>
+        <div class="SocialFooter">
+              <div>
+                <h3>ArQ Estudio</h3>
+                <br>
+                <ul>
+                  <li><i class="fas fa-map-marked-alt"></i> Lima - Perú</li>
+                  <li><i class="fas fa-phone-square-alt"></i> +51-961-055-778</li>
+                  <li><i class="far fa-envelope-open"></i> peter.calderon85@icloud.com</li>
+                </ul>
+              </div>
+              <div>
+                <h3>Acerca de nosotros</h3>
+                <br>
+                <ul>
+                  <li>Nosotros</li>
+                  <li>¿Qué es lo que hacemos?</li>
+                  <li>Proyectos</li>
+                  <li>Aplica a una pasantía con nosotros</li>
+                </ul>
+                <a href="https://www.google.com/"> </a>
+              </div>
+              <div>
+                <h3>ArQ Estudio</h3>
+                <br>
+                <ul>
+                  <li><i class="fab fa-instagram" ></i> Instagram</li>
+                  <li><i class="fab fa-facebook-square"></i> Facebook</li>
+                  <li><i class="fab fa-linkedin" ></i> Linkedin</li>
+                  <li><i class="fab fa-youtube" ></i> Youtube</li>
+                </ul>
+              </div>
+              
+              <div>
+                <p>2020 ArQ-Estudio. Todos los derechos reservados.</p>
+              </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
+
