--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h1>Arquitectura inspirada en el mundo</h1>
             <p>
               Nace “Diseñar para la vida”, una revista online especializada en
-              arquitectura saludable y sostenible.
+              arquitectura sostenible.
             </p>
           </div>
         </section>
@@ -580,7 +580,7 @@
                 <a href="https://www.google.com/"> </a>
               </div>
               <div>
-                <h3>ArQ Estudio</h3>
+                <h3>Síguenos</h3>
                 <br>
                 <ul>
                   <li><i class="fab fa-instagram" ></i> Instagram</li>
